--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -37,21 +37,23 @@
 .navLink {
   margin-right: 48px;
   font-weight: 500;
-}
 
-.navText:hover {
-  color: #000;
-}
+  .navText {
+    font-size: 12px;
+    line-height: 20px;
+    color: #797979;
+  }
 
-.navLinkSpan {
-  margin-left: 10px;
-  color: #da0916;
-}
+  .navText:hover {
+    color: #000;
+  }
 
-.navText {
-  font-size: 12px;
-  line-height: 20px;
-  color: #797979;
+  .navLinkSpan {
+    margin-left: 10px;
+    color: #da0916;
+  }
+  
+
 }
 
 .navPhone {
@@ -85,6 +87,13 @@
   border-radius: 28px;
 }
 
+
+
+
+
+
+
+
 .secondRowCtlBtn {
   display: flex;
   align-items: center;
@@ -100,7 +109,7 @@
 }
 
 .secondRowCtlBtn:hover {
-  background-color: #b4030e;
+  color: #fff;
 }
 
 .iconRooms {
@@ -118,7 +127,7 @@
 }
 
 .line {
-  background: #fff;
+  background: #000;
   border-radius: 4px;
   width: 18px;
   height: 2px;
@@ -138,17 +147,17 @@
 
 .catalog {
   position: fixed;
-  left: -250px;
+  left: 203px;
   top: 170px;
-  background-color: #fff;
+  background-color: red;
 
 }
 
-.opened {
-  display: block;
-  transition: trasform 0.8s linear;
-  left: 202px;
-} 
+// .opened {
+//   display: block;
+//   transition: trasform 0.8s linear;
+//   left: 202px;
+// } 
 
 .active {
   background-color: #da0916;
@@ -193,7 +202,7 @@
   overflow: hidden;
   border: 1px solid #797979;
   border-radius: 100px;
-  padding: 0 76px 0 20px;
+  padding: 0 14px 0 20px;
   transition: 0.2s;
 }
 
@@ -281,31 +290,41 @@
 /* Третья строка */
 
 .thirdRowLinkFlex {
+  position: relative;
   display: flex;
+
+  .thirdRowLink {
+    background-color: #f9f9f9;
+    color: #000;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 24px;
+    padding: 5px 16px;
+    border-radius: 28px;
+    align-items: center;
+    transition: 0.2s;
+  }
+
+  .thirdRowLink:hover {
+    background-color: #ececec;
+  }
+  
+  .thirdRowLink:not(:last-child) {
+    margin-right: 12px;
+  }
+  
+  .firstLink {
+    background-color: #ddcd53;
+    color: #B4030E;
+  }
+  .firstLink:hover {
+    background-color: #9c903c;
+  }
 }
 
-.thirdRowLink {
-  background-color: #f9f9f9;
-  color: #000;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 24px;
-  padding: 9px 12px;
-  border-radius: 28px;
-  align-items: center;
-  transition: 0.2s;
-}
-
-.thirdRowLink:not(:last-child) {
-  margin-right: 12px;
-}
-
-.thirdRowLink:nth-child(1) {
-  color: #b4030e;
-}
 
 .thirdRowBtn {
-  background-color: #f1f1f1;
+  background-color: #f9f9f9;
   min-width: 50px;
   height: 28px;
   margin-left: 12px;
@@ -315,6 +334,62 @@
   font-weight: 900;
 }
 
+.thirdRowBtn:hover {
+  background-color: #ececec;
+}
+
+
 .dots {
   cursor: pointer;
+  transition: 0.2s;
+}
+
+.activeDots {
+  
+}
+
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: .8;
+  z-index: 1;
+  background-color: #4c4c4c;
+  transition: 0.2s;
+}
+
+.dotsCard {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 0;
+  right: 305px;
+  z-index: 5;
+  padding: 48px 20px 30px;
+  background-color: #fff;
+  box-shadow: 0 4px 45px #00000026;
+  border-radius: 16px;
+  
+}
+
+.textDots {
+  margin-bottom: 12px;
+  text-align: left;
+}
+
+.dotsBtn {
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  top: 13px;
+  right: 20px;
+  border: none;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+.icon-close {
+  fill: #4c4c4c;
 }
