--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -1,3 +1,9 @@
+.container {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 205px;
+}
+
 .flex {
   display: flex;
   justify-content: space-between;
