--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -45,7 +45,7 @@
 
   &__app_img {
     position: absolute;
-    bottom: 0;
+    bottom: 2px;
     left: calc(50% - 50px);
   }
 
@@ -66,7 +66,6 @@
 
 .subscribe {
   background-color: #f1f1f1;
-  height: 148px;
 
   &__container {
     display: flex;
@@ -194,52 +193,8 @@
 
   .checkbox_main_item:checked + .check__box {
     background-color: #c0c0c0;
-    // width: 15px;
-    // height: 15px;
     background-image: url('/image-page-footer/checked.svg');
-    // border-left: 5px solid #fff;
-    // border-bottom: 5px solid #fff;
-    // transform: translateY(-65%) rotate(-45deg) scale(1);
-    // opacity: 2;
-    // border-left: solid 2px #ffffff;
-    // border-bottom: solid 2px #ffffff;
-    // left: 4px;
-    // width: 10px;
-    // height: 4px;
-    // transform: translateY(-65%) rotate(-45deg) scale(1);
   }
-
-  // .checkbox_span {
-  //   margin-left: 30px; 
-  // }
-
-  // .checkbox_main_item::before {
-  //   content: '';
-  //   position: absolute;
-  //   top: 50%;
-  //   left: 0;
-  //   
-  //   transform: translateY(-50%);
-  // }
-
-  // .checkbox_main_item::after {
-  //   content: '';
-  //   position: absolute;
-  //   top: 50%;
-  //   left: 0;
-  //   transform: translateY(-50%);
-  //   border-left: solid 1px #00a55f;
-  //   border-bottom: solid 1px #00a55f;
-  //   transition: opacity .2s,transform .2s;
-  //   transform: translateY(-65%) rotate(-45deg) scale(0);
-  //   opacity: 0;
-  //   left: 6px;
-  //   width: 8px;
-  //   height: 4px;
-  // }
-  
-
-
 
   &__social_list_flex {
     display: flex;
@@ -309,6 +264,9 @@
 
   
 
+  .order {
+    order: -1;
+  }
   &__title {
     font-size: 24px;
     line-height: 28px;
