--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -128,6 +128,7 @@
     border: 1px solid #c2d2dc;
     padding-left: 31px;
     font-size: 14px;
+    background-color: white;
   }
 
   .form_btn {
@@ -425,6 +426,7 @@
   font-size: 14px;
   line-height: 17px;
   font-weight: 500;
+  color: #000;
   cursor: pointer;
 }
 
