--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,5 +1,13 @@
+// import 'swiper/scss';
+// import 'swiper/scss/navigation';
+// import 'swiper/scss/pagination';
 .main {
   &__banner {
+    margin-top: 28px;
     
+  }
+
+  .swiper-button-prev {
+    width: 5px;
   }
 }
