--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,18 +1,37 @@
 .main {
   &__banner {
     margin-top: 28px;
-    
   }
 
   
 }
 
+.imgBan {
+  height: 100%;
+  width: 100%;
+}
 
+.swiper-nav-btns {
+  position: relative;
+}
 
-.mySwiper {
+.prev {
+  transform: scaleX(-1);
+  width: 24px;
+ 
+}
 
-  .swiper-button-prev {
-    color: azure;
-  }
-  color: #000;
+.next {
+  
+}
+
+.bannerBtn {
+  cursor: pointer;
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
+  background: #ffffff;
+  border: 1px solid #c0c0c0;
+  background-image: url('/image-index/arrow.svg');
+  
 }
