--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -91,11 +91,11 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
+// @media (prefers-color-scheme: dark) {
+//   html {
+//     color-scheme: dark;
+//   }
+// }
 
 ul {
   list-style-type: none;
