--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -44,3 +44,20 @@
   right: 0;
   margin-right: 24px;
 }
+
+.swiperPagination {
+  display: flex;
+  justify-content: center;
+}
+.swiperPagBul {
+  width: 12px;
+  height: 4px;
+  margin: 0 3px;
+  background: #d7d7d7;
+  border-radius: 10px;
+}
+
+.swiperPagBul_Active {
+  width: 40px;
+  background: #000000;
+}
