--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -45,11 +45,11 @@
   margin-right: 24px;
 }
 
-.swiperPagination {
+.swiperScrollCont {
   display: flex;
   justify-content: center;
 }
-.swiperPagBul {
+.swiperScrollbar {
   width: 12px;
   height: 4px;
   margin: 0 3px;
@@ -57,7 +57,7 @@
   border-radius: 10px;
 }
 
-.swiperPagBul_Active {
+.swiper-scrollbar-drag {
   width: 40px;
   background: #000000;
 }
