--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -3,6 +3,27 @@
     margin-top: 28px;
   }
 
+  :global {
+    .swiper-pagination-bullet {
+      width: 12px;
+      height: 4px;
+      margin: 0 3px;
+      background: #d7d7d7;
+      border-radius: 10px;
+      opacity: 1;
+  
+    }
+  
+    .swiper-pagination-bullet-active {
+      width: 40px;
+      background: #000000;
+    }
+  
+    .swiper-pagination {
+      position: relative;
+    }
+  }
+
   
 }
 
@@ -43,21 +64,4 @@
 .next {
   right: 0;
   margin-right: 24px;
-}
-
-.swiperScrollCont {
-  display: flex;
-  justify-content: center;
-}
-.swiperScrollbar {
-  width: 12px;
-  height: 4px;
-  margin: 0 3px;
-  background: #d7d7d7;
-  border-radius: 10px;
-}
-
-.swiper-scrollbar-drag {
-  width: 40px;
-  background: #000000;
 }
