--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -10,423 +10,23 @@
   background-image: url(/image-page-footer/backgroung.webp);
   background-repeat: no-repeat;
   background-size: contain;
-  
-
-  &__app_block {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    min-height: 228px;
-  }
-
-  &__app_link {
-    display: flex;
-    flex-direction: column;
-    max-width: 491px;
-  }
-
-  &__app_link_text {
-    margin-bottom: 16px;
-    font-weight: 700;
-    font-size: 28px;
-    line-height: 34px;
-    color: #000;
-  }
-
-  &__app_link_cards {
-    display: flex;
-    
-  }
-
-  .appStore:not(last-child) {
-    margin-right: 18px;
-  }
-
-  &__app_img {
-    position: absolute;
-    bottom: 2px;
-    left: calc(50% - 50px);
-  }
-
-  &__qr_card {
-    display: flex;
-    align-items: center;
-  }
-
-  &_qr_text {
-    margin-left: 16px;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 26px;
-    max-width: 211px;
-    color: #000;
-  }
 }
 
 .subscribe {
   background-color: #f1f1f1;
-
-  &__container {
-    display: flex;
-    padding-top: 40px;
-    padding-bottom: 60px;
-  }
-
-  &__text {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 24px;
-    color: #000;
-    margin-right: 42px;
-    max-width: 450px;
-  }
-
-  &__form {
-    display: flex;
-    flex: 0 1 687px;
-    margin-right: 81px;
-  }
-
-  &__form_input {
-    position: relative;
-    flex: 0 1 492px;
-  }
-
-  .input_f {
-    height: 48px;
-  }
-
-  &__input_container {
-    height: 100%;
-    border-radius: 25px;
-    border: none;
-  }
-
-  .tooltipText {
-    position: absolute;
-    visibility: hidden;
-    left: 1px;
-    top: -24px;
-    color: #da0916;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 16px;
-    white-space: nowrap;
-  }
-
-  // .f {
-  //   visibility: visible;
-  // }
-
-  &__input {
-    height: 100%;
-    width: 100%;
-    border-radius: 25px;
-    border: 1px solid #c2d2dc;
-    padding-left: 31px;
-    font-size: 14px;
-    background-color: white;
-  }
-
-  .form_btn {
-    margin-left: 20px;
-    background: #000000;
-    border: 2px solid #000000;
-    border-radius: 25px;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 24px;
-    color: #fff;
-    text-align: center;
-    padding: 0 36px;
-    height: 48px;
-    opacity: .5;
-  }
-
-  .form_btn:hover {
-    background-color: #303030;
-    cursor: pointer;
-  }
-
-  .form_btn_active {
-    opacity: 5;
-  }
-
-  .agreement {
-    position: absolute;
-    bottom: -30px;
-  }
-
-
-  .check {
-    
-  }
-
-  .checkbox_main_item {
-    position: absolute;
-    appearance: none;
-  }
-
-  .check__box {
-    position: absolute;
-    background-color: #fff;
-    width: 20px;
-    height: 20px;
-    border: 1px solid #c0c0c0;
-    border-radius: 2px;
-    cursor: pointer;
-  }
-
-  .checkbox_span {
-    cursor: pointer;
-    font-size: 12px;
-    line-height: 16px;
-    color: #797979;
-    margin-top: 3px;
-    padding-left: 30px;
-    white-space: nowrap; 
-  }
-
-  // :checked
-
-  .checkbox_main_item:checked + .check__box {
-    background-color: #c0c0c0;
-    background-image: url('/image-page-footer/checked.svg');
-  }
-
-  &__social_list_flex {
-    display: flex;
-  }
-
-  &__social_item {
-    margin-right: 16px;
-    width: 48px;
-    height: 48px;
-    background: #ffffff;
-    border: 1px solid #e7e7e7;
-    border-radius: 100%;
-    transition: background-color .3s;
-  }
-
-  &__social_item:hover {
-    border: 1px solid #c0c0c0;
-  }
-
-  &__social_item a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-  }
 }
 
-
-
-// Навигация
 .footer__nav {
   background-color: #f9f9f9;
   padding: 60px 0;
-
-
-  &__flex {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }  
-
-  
-  // Nav
-  &__banner {
-    background-image: url('/image-page-footer/banner.webp');
-    padding: 28px 24px;
-    margin-right: 30px;
-    background-size: cover;
-    background-position-x: center;
-    width: 451px;
-    height: 100%;
-    cursor: pointer;
-
-    &__content__top {
-      max-width: 204px;
-    }
-
-    &__content__bottom {
-      display: flex;
-
-      &__text {
-        margin-left: 16px;
-      }
-    }
-  }
-
-  
-
-  .order {
-    order: -1;
-  }
-  &__title {
-    font-size: 24px;
-    line-height: 28px;
-    font-weight: 700;
-    margin-bottom: 8px;
-  }
-  
-  &__desc {
-    font-size: 14px;
-    line-height: 18px;
-    font-weight: 600;
-    margin: 0;
-  }
-
-  &__title__bot {
-    font-size: 20px;
-    line-height: 24px;
-    font-weight: 700;
-    margin-bottom: 4px;
-  }
-
-  .footer__nav__btn {
-    display: block;
-    padding: 12px 28px;
-    color: #fff;
-    background: #da0916;
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 24px;
-    border-radius: 25px;
-    border: none;
-    outline: none;
-    margin: 16px 0 32px;
-    cursor: pointer;
-  }
-
-  
-  &__section {
-    width: 233px;
-    margin: 0 20px 60px 0;
-  }
-
-  &__name {
-  margin-bottom: 24px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 24px;
-  color: #000;
-  }
-
-  &__link {
-    margin-bottom: 16px;
-  }
-
-  &__link a {
-    font-size: 14px;
-    line-height: 20px;
-    color: #797979;
-  }
-
-  &__link a:hover {
-    color: #000;
-  }
 }
 
-.appStore:not(:last-child) {
-  margin-right: 16px;
+.footer__nav__flex {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
-// Copyright
 .footer__copyright {
   background-color: #f9f9f9;
-  
-  &__wrapper {
-    display: flex;
-    padding: 32px 0 40px;
-    border-top: 1px solid #e7e7e7;
-  }
-
-  &__city {
-    margin-right: 100px;
-
-    &__img1 {
-      position: absolute;
-      left: -26px;
-      top: -5px;
-    }
-    &__img2 {
-      position: absolute;
-      right: -10px;
-      bottom: 2px;
-    }
-  }
-
-  .cityFlex {
-    display: flex;
-    position: relative;
-  }
-
-
-  &__links {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 24px;
-
-    &__item {
-      font-size: 12px;
-      line-height: 16px;
-      color: #797979;
-    }
-    &__item:hover {
-      transition: color linear .2s;
-      color: #000;
-    }
-
-  }
-
-  &__laureat__info {
-    margin-bottom: 16px;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 16px;
-    color: silver;
-  }
-  .link {
-    text-decoration: underline;
-  }
-
-  .link:hover {
-    transition: color linear .2s;
-    color: #797979;;
-  }
-
-  &__legal__address {
-    margin-bottom: 24px;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 16px;
-    color: silver;
-  }
-
-  &__date {
-    font-size: 12px;
-    line-height: 16px;
-    color: silver;
-  }
-}
-
-
-.cityText {
-  margin-left: 10px;
-  margin-right: 10px;
-  font-size: 14px;
-  line-height: 17px;
-  font-weight: 500;
-  color: #000;
-  cursor: pointer;
-}
-
-.cityText:hover {
-  border-bottom: 1px solid black;
 }
