--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -101,3 +101,15 @@ ul {
   list-style-type: none;
 }
 
+.container {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 205px;
+}
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+}
