--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -1,7 +1,7 @@
 .container {
   width: 100%;
   margin: 0 auto;
-  padding: 0 205px;
+  padding: 0 10.5208vw;
 }
 
 .flex {
@@ -29,4 +29,24 @@
   position: relative;
   display: flex;
   background-color: white;
+}
+
+
+@media (max-width: 1600px) {
+  .container {
+  padding: 0 1.625vw; }
+}
+
+@media (max-width: 1440px) {
+  .container {
+  padding: 0 5.555vw; }
+}
+
+@media (max-width: 1366px) {
+  .container {
+  padding: 0 3.0746vw; }
+}
+@media (max-width: 1280px) {
+  .container {
+  padding: 0 3.9062vw; }
 }
