--- a/components/footer/ThirdRow.module.scss
+++ b/components/footer/ThirdRow.module.scss
@@ -1,5 +1,3 @@
-
-
 .footer__nav__banner {
   background-image: url('/image-page-footer/banner.webp');
   padding: 28px 24px;
@@ -64,6 +62,8 @@
   }
 
 
+
+
 .footer__nav__section {
   width: 233px;
   margin: 0 20px 60px 0;
@@ -95,3 +95,5 @@
 .appStore:not(:last-child) {
   margin-right: 16px;
 }
+
+// @media (max-width:)
