--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -101,11 +101,11 @@ ul {
   list-style-type: none;
 }
 
-.container {
-  width: 100%;
-  margin: 0 auto;
-  padding: 0 205px;
-}
+// .container {
+//   width: 100%;
+//   margin: 0 auto;
+//   padding: 0 10.5208vw;
+// }
 
 .flex {
   display: flex;
