--- a/components/IndexPage/PopCat.module.scss
+++ b/components/IndexPage/PopCat.module.scss
@@ -2,12 +2,12 @@
   margin-top: 45px;
 }
 
-.categories {
-  margin-top: 30px;
+
 
   .catList {
     display: flex;
     justify-content: center;
+    margin-top: 30px;
 
   .catItem {
     width: 200px;
@@ -31,7 +31,6 @@
   }
 
   }
-}
 
 .btnFlex {
   display: flex;
@@ -39,6 +38,8 @@
   margin-top: 48px;
 }
 
-
+@media (max-width: 1280px) {
+  
+}
 
 
