--- a/components/footer/SocialList.module.scss
+++ b/components/footer/SocialList.module.scss
@@ -5,3 +5,13 @@
 .appStore:not(last-child) {
   margin-right: 18px;
 }
+
+@media (max-width: 1280px) {
+  .footer__app_link_cards {
+    
+  }
+  .appStore:not(last-child) {
+    margin-bottom: 18px;
+    margin-right: 8px;
+  }
+}
