--- a/components/footer/ThirdRow.module.scss
+++ b/components/footer/ThirdRow.module.scss
@@ -1,7 +1,7 @@
 .footer__nav__banner {
   background-image: url('/image-page-footer/banner.webp');
   padding: 28px 24px;
-  margin-right: 30px;
+  // margin-right: 30px;
   background-size: cover;
   background-position-x: center;
   width: 451px;
@@ -61,9 +61,6 @@
   cursor: pointer;
   }
 
-
-
-
 .footer__nav__section {
   width: 233px;
   margin: 0 20px 60px 0;
@@ -96,4 +93,19 @@
   margin-right: 16px;
 }
 
-// @media (max-width:)
+@media (max-width: 1440px) {
+  .footer__nav__section {
+    width: 187px;
+  }
+}
+
+@media (max-width: 1280px) {
+  .footer__nav__section {
+    width: 275px;
+  }
+  .footer__nav__banner {
+    margin-right: 40px;
+    margin-bottom: 35px;
+  }
+
+}
