--- a/components/header/SecondRow.module.scss
+++ b/components/header/SecondRow.module.scss
@@ -1,7 +1,10 @@
 .flex {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
 }
-  
+
 .logoLink {
   margin-right: 32px;
 }
@@ -58,6 +61,10 @@
   cursor: pointer;
   border: none;
   background-color: transparent;
+}
+
+.flexBtn {
+  display: flex;
 }
 
 .icon {
@@ -122,4 +129,21 @@
 
 .iconEmpty {
   background-color: #c0c0c0;
+}
+
+@media (max-width:1440px) {
+  .flex {
+  flex-wrap: wrap;
+  margin-top: 20px;
+  }
+
+  .searchContainer {
+    order: 1;
+    padding: 0;
+    margin-top: 20px; 
+  }
+
+  .searchBtn {
+    right: 10px;
+  }
 }
