--- a/components/footer/SecondRow.module.scss
+++ b/components/footer/SecondRow.module.scss
@@ -146,3 +146,29 @@
     width: 100%;
     height: 100%;
   }
+
+  @media (max-width: 1024px) {
+    .subscribe__text {
+      margin: 0;
+      width: 250px;
+    }
+    .subscribe__form {
+      margin: 0;
+    }
+    .subscribe__social_list {
+      display: none;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .subscribe__text {
+      margin: 0;
+      width: 250px;
+    }
+    .subscribe__form {
+      margin: 0;
+    }
+    .subscribe__social_list {
+      display: none;
+    }
+  }
